test/udt-mixing-constructors.ktn
data A:
  case A (int)

data B:
  case B (int)

1 A_A
match:
  case A_A: sayInt
  case B_B: sayInt
